Fix hyphenation character
The default looks weird.

--- a/report/report.css
+++ b/report/report.css
@@ -44,6 +44,7 @@ html {
     -webkit-hyphens: auto;
     -ms-hyphens: auto;
     hyphens: auto;
+    hyphenate-character: "-";
 }
 
 body {
